--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,8 @@
 @import "layouts";
 @import "forms";
 @import "devise";
-
-  @import "scaffolds";
-  @import "goals";
-  @import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
+@import "home";
+@import "todos";
+@import "scaffolds";
+@import "goals";
+@import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
